--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,8 @@
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.8.0
-attrs==25.1.0
-beautifulsoup4==4.13.3
-bidict==0.23.1
-cachetools==5.5.1
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-docutils==0.21.2
-fastapi==0.115.8
-frozenlist==1.5.0
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.1
-google-api-python-client==2.161.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.4
-googleapis-common-protos==1.67.0
-googlesearch-python==1.3.0
-grpcio==1.70.0
-grpcio-status==1.70.0
-gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.7
-httplib2==0.22.0
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-ifaddr==0.2.0
-itsdangerous==2.2.0
-Jinja2==3.1.5
-markdown2==2.5.3
-MarkupSafe==3.0.2
-multidict==6.1.0
-nicegui==2.11.1
-orjson==3.10.15
-packaging==24.2
-propcache==0.2.1
-proto-plus==1.26.0
-protobuf==5.29.3
-pscript==0.7.7
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-pyparsing==3.2.1
-python-dotenv==1.0.1
-python-engineio==4.11.2
-python-multipart==0.0.20
-python-socketio==5.12.1
-PyYAML==6.0.2
-requests==2.32.3
-rsa==4.9
-simple-websocket==1.1.0
-sniffio==1.3.1
-soupsieve==2.6
-starlette==0.45.3
-tqdm==4.67.1
-typing_extensions==4.12.2
-uritemplate==4.1.1
-urllib3==2.3.0
-uvicorn==0.34.0
-uvloop==0.21.0
-vbuild==0.8.2
-watchfiles==1.0.4
-websockets==14.2
-wsproto==1.2.0
-yarl==1.18.3
+asyncio
+nicegui
+googlesearch-python
+requests
+beautifulsoup4
+google-generativeai
+gunicorn
+uvicorn
